# GameRMCR

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.kiro/specs/gamepp-clone/: design.md  requirements.md  tasks.md
config/: blacklist.json  default_config.json
logs/: .gitkeep
native/: CMakeLists.txt
native/include/: exports.h
native/src/: main.cpp
native/src/dxhook/: dx11_hook.cpp  dx11_hook.h  hook_manager.cpp
native/src/overlay/: imgui_overlay.cpp  imgui_overlay.h
src/: __init__.py  main.py  version.py
src/auth/: __init__.py  keyauth.py
src/core/: __init__.py  autostart.py  config.py  error_handler.py  filter_manager.py  fps_calculator.py  game_detector.py  logger.py  monitoring.py  optimizer.py  theme_manager.py  updater.py
src/hardware/: __init__.py  amd_ryzen.py  cpu_monitor.py  disk_monitor.py  gpu_monitor.py  intel_power_gadget.py  memory_monitor.py  msr_reader.py  network_monitor.py  ohm_wrapper.py
src/models/: __init__.py  config.py  errors.py  metrics.py
src/overlay/: __init__.py  dll_wrapper.py  python_overlay.py
src/ui/: __init__.py  main_window.py  tray_icon.py
src/ui/dialogs/: update_dialog.py
src/ui/pages/: __init__.py  about.py  dashboard.py  filters.py  games.py  login.py  optimizer.py  overlay_editor.py  settings.py  system_monitor.py
src/ui/styles/: login.qss  style.qss
src/ui/widgets/: __init__.py  metric_card.py  metric_graph.py
themes/: dark.json  default.json  neon.json
